tests/rosetta/out/Rust/chinese-remainder-theorem.error
rustc: exit status 1
error[E0277]: cannot multiply `f64` by `i32`
  --> /tmp/chinese-remainder-theorem.rs:11:55
   |
11 |         return vec![g, y1 - ((b as f64) / (a as f64)) * x1, x1];
   |                                                       ^ no implementation for `f64 * i32`
   |
   = help: the trait `Mul<i32>` is not implemented for `f64`
   = help: the following other types implement trait `Mul<Rhs>`:
             `&f64` implements `Mul<f64>`
             `&f64` implements `Mul`
             `f64` implements `Mul<&f64>`
             `f64` implements `Mul`

error[E0277]: cannot calculate the remainder of `f64` divided by `i32`
  --> /tmp/chinese-remainder-theorem.rs:37:32
   |
37 |             let inv = modInv(p % ni, ni);
   |                                ^ no implementation for `f64 % i32`
   |
   = help: the trait `Rem<i32>` is not implemented for `f64`
   = help: the following other types implement trait `Rem<Rhs>`:
             `&f64` implements `Rem<f64>`
             `&f64` implements `Rem`
             `f64` implements `Rem<&f64>`
             `f64` implements `Rem`

error[E0277]: cannot multiply `i32` by `f64`
  --> /tmp/chinese-remainder-theorem.rs:38:25
   |
38 |             x = (x + ai * inv as f64) * p;
   |                         ^ no implementation for `i32 * f64`
   |
   = help: the trait `Mul<f64>` is not implemented for `i32`
   = help: the following other types implement trait `Mul<Rhs>`:
             `&i32` implements `Mul<i32>`
             `&i32` implements `Mul`
             `i32` implements `Mul<&i32>`
             `i32` implements `Mul`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
